--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [tool:pytest]
-testpaths = neuclease/tests
+testpaths = trinkets/tests
 
 # Don't hide stderr -- that's how we see faulthandler output!
 addopts = -s --tb=native
